--- a/survey-form/vercel.json
+++ b/survey-form/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
     "routes": [
-        { "src": "/api/server", "dest": "/api/server.js" }
+        { "src": "/api/feedback", "dest": "/api/feedback.js" }
     ]
 }
